--- a/style.css
+++ b/style.css
@@ -9,13 +9,25 @@ a{
 ul,ol,li{
     list-style: none;
 }
+
 body{
+    background-color: #000000;
     height: 100vh;
     width: 100vw;
     display: grid;
     grid-template-rows: 100px 1fr 100px;
-    padding-left: 96px;
-    padding-right: 96px;
+    padding-left: 290px;
+    padding-right: 290px;
+}
+h1{
+    text-align: center;
+    padding-top: 10px;
+}
+.titulo1{
+    color: white;
+}
+.titulo2{
+    color: crimson;
 }
 .galeria{
     height: 100%;
@@ -38,42 +50,42 @@ body{
 
 .foto:nth-child(1){
     grid-area: f1;
-    background-image: url(./img/fundo-fotografico-em-tecido-castelo-2-20x1-50m-backdrop.jpg);
+    background-image: url(./img/gokuSSSJ10.jpg);
 }
 
 .foto:nth-child(2){
     grid-area: f2;
-    background-image: url(./img/1.jpg);
+    background-image: url(./img/gokuSSSJ20.jpg);
 }
 
 .foto:nth-child(3){
     grid-area: f3;
-    background-image: url(./img/29d4eb_487cf69c3de64ccab083827ba62d10f4.jpg);
+    background-image: url(./img/gokuSSSJ50.jpg);
 }
 
 .foto:nth-child(4){
     grid-area: f4;
-    background-image: url(./img/5013008.jpg);
+    background-image: url(./img/gokuSSSJ10000.jpg);
 }
 
 .foto:nth-child(5){
     grid-area: f5;
-    background-image: url(./img/vancouver.jpg.jpg);
+    background-image: url(./img/gokuSSSJ1000000.jpg);
 }
 
 .foto:nth-child(6){
     grid-area: f6;
-    background-image: url(./img/fotos-da-torre-de-paris-1.jpg);
+    background-image: url(./img/gokuSSSJ100000000.jpg);
 }
 
 .foto:nth-child(7){
     grid-area: f7;
-    background-image: url(./img/manhattan-nova-york.jpg);
+    background-image: url(./img/gokuSSSJ10000000000.jpg);
 }
 
 .foto:nth-child(8){
     grid-area: f8;
-    background-image: url(./img/a-linda-spiegelgracht-em-clima-de-natal.jpg);
+    background-image: url(./img/gokuSSSJ100000000000000000000000000000000000.jpg);
 }
 
 .foto_info{
@@ -105,4 +117,32 @@ body{
         width: 100%;
         height: 33vh;
     }
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ver_mais{
+    border-radius: 50px;
+    background-color: crimson;
+    color: white;
+    align-items: center;
+    width: 150px;
+    height: 40px;
+    font-size: 1.3em;
+    display: flex;
+    justify-content: center;
+}
+.ver_mais *{
+    text-decoration: none;
+    color: white;
+}
+.ver_mais:hover{
+    background-color: crimson;
+    border-style: solid;
+    border-color: white;
+    transform: scale(1.4);
 }
